# HOLY-BIBLE

./: .flake8  .gitignore  Blueprints.txt  CONTRIBUTING.md  README.md  pyproject.toml  requirements.txt
.github/workflows/: python.yml
Genesis/: Genesis.ipynb
Old Testament/Genesis/: Genesis.ipynb
bible/: __init__.py  actions.py
old_testament/genesis/: Genesis.ipynb
tests/: test_actions.py  test_webapp.py
webapp/: __init__.py  notes.py
webapp/templates/: index.html  notes.html
